@@ -95,7 +95,7 @@ def _request_signature(backend, request, key, hmac):
             request.method, request.path,
             request.META['HTTP_X_FOST_TIMESTAMP'],
             signed_headers,
-            request.raw_post_data)
+            request.raw_post_data or request.META.get('QUERY_STRING', ''))
         if signature == hmac:
             request.SIGNED = signed
             if request.SIGNED.has_key('X-FOST-User'):
