@@ -85,6 +85,18 @@ class TestAuthentication(_TestBaseWithGetSecret):
             self.assertTrue(self.request.SIGNED.has_key(key), (key, self.request.SIGNED))
 
 
+    def test_signed_get_with_query_string(self):
+        self.request.META['QUERY_STRING'] = 'query'
+        self.request.sign_request(self.key, self.secret())
+        key, self.hmac = self.middleware.key_hmac(self.request)
+        with mock.patch('fost_authn.authentication._forbid', self.fail):
+            result = self.backend.authenticate(request = self.request,
+                key = self.key, hmac = self.hmac)
+        self.assertTrue(hasattr(self.request, 'SIGNED'))
+        for key in ['X-FOST-Headers']:
+            self.assertTrue(self.request.SIGNED.has_key(key), (key, self.request.SIGNED))
+
+
 class TestSigned(_TestBaseWithGetSecret):
     """
         Perform various tests on the signed headers
